# krusty-lang

./: .gitignore  Cargo.toml  Makefile  README.md  hello.kry  run_test_code.bat  run_test_code.sh  test.mon
.github/workflows/: krusty-tests.yaml
examples/: test.rs
examples/console_line/: unix.rs  win.rs
krust/: Cargo.toml
krust/src/: main.rs
krust/src/repl/: colors.rs  prompt.rs
krust/src/syntax/: parser.rs
krusty/: Cargo.toml
krusty-core/: Cargo.toml
krusty-core/src/: lib.rs  macros.rs
krusty-core/src/lib/: builtins.rs  errors.rs  funcdef.rs  helper.rs  loader.rs  moddef.rs  pkg.rs
krusty-core/src/syntax/: errors.rs  evaluator.rs  lexer.rs  lexer_tweaks.rs  parser.rs
krusty-repl/: Cargo.toml
krusty-repl/examples/: test.rs
krusty-repl/src/: colors.rs  lib.rs  prompt.rs
krusty/src/: main.rs
os/: Cargo.toml
os/src/: file_io.rs  lib.rs  os.rs
src/: lexer.rs  macros.rs  main.rs  parser.rs
src/lib/: builtins.rs
src/repl/: colors.rs  prompt.rs
src/syntax/: evaluator.rs  lexer.rs  parser.rs
test_code/: .gitignore  math.krt  math.kry  test.krt  test.kry  test.mon  test2.krt  test2.kry  test2.mon  test_err_handling.krt  test_for.krt  test_for.kry  test_if.krt  test_if.kry  test_imports.krt  test_imports.kry  test_lists.krt  test_lists.kry  test_os_dylib.krt
test_code/mathlib/: __pkg__.krt  arith.krt  pi.kry
