[package]
name = "krust"
version = "0.1.1"
authors = ["Shashank Gopikrishna <shashank.gopikrishna@gmail.com>"]
edition = "2018"


[[example]]
name = "test" # examples/test.rs

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
path-slash = "0.1.3"
rustyline = "6.3.0"


[dev-dependencies]
ctrlc = "3.1.7"
console = "0.13.0"
