[package]
name = "krusty-core"
version = "0.3.0"
authors = ["Shashank Gopikrishna <shashank.gopikrishna@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
path-slash = "0.1.3"
libloading = "0.6.5"
dirs = "4.0.0"
