[package]
name = "krusty-repl"
version = "0.3.0"
authors = ["Shashank Gopikrishna <shashank.gopikrishna@gmail.com>"]
edition = "2018"

[[example]]
name = "test" # examples/test.rs

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "10.0.0"

[dev-dependencies]
# used in examples
ctrlc = "3.1.7"
console = "0.13.0"
