[package]
name = "krusty"
version = "0.2.0"
authors = ["Shashank Gopikrishna <shashank.gopikrishna@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path-slash = "0.1.3"
krusty-core = { path = "../krusty-core" }
krusty-repl = { path = "../krusty-repl" }
