[package]
name = "os"
version = "0.1.0"
authors = ["Shashank Gopikrishna <shashank.gopikrishna@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path-slash = "0.1.3"
krusty-core = { path = "../krusty-core" }

[lib]
crate-type = ["dylib"]
